--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,9 @@
 #content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+
+    display: grid;
+    grid-template-rows: 2fr 8fr 1fr;
 }
 
 #title, #projects-sidebar, #content {
@@ -33,4 +36,25 @@
     left: 50%;
     background-color: blue;
     color: white;
+}
+
+#content-project-title {
+    font-size: 2rem;
+    justify-self: center;
+}
+
+#content-todo-list {
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+#todo-item {
+    font-size: 1.2rem;
+    padding: 5px;
+}
+
+#add-new-item {
+    font-size: 1.2rem;
+    width: 30%;
+    justify-self: center;
 }
