--- a/src/styles.css
+++ b/src/styles.css
@@ -3,19 +3,29 @@
     grid-template-rows: 1fr 5fr;
     grid-template-columns: 1fr 4fr;
 
-    width: 90vw;
-    height: 90vh;
     position: relative;
 }
 
-#title {
+#container-title {
     grid-column: 1 / 3;
     grid-row: 1 / 2;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.8rem;
+    padding: 10px;
 }
 
 #projects-sidebar {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+
+
+    display: grid;
+    grid-template-rows: 1fr 5fr 1fr;
+    justify-content: center;
 }
 
 #content {
@@ -23,10 +33,10 @@
     grid-row: 2 / 3;
 
     display: grid;
-    grid-template-rows: 2fr 8fr 1fr;
+    grid-template-rows: 1fr 8fr 1fr;
 }
 
-#title, #projects-sidebar, #content {
+#container-title, #projects-sidebar, #content {
     border: solid 1px black;
 }
 
@@ -39,13 +49,15 @@
 }
 
 #content-project-title {
-    font-size: 2rem;
+    font-size: 1.6rem;
     justify-self: center;
+    align-self: center;
 }
 
 #content-todo-list {
     display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+    overflow: auto;
 }
 
 #todo-item {
@@ -54,7 +66,19 @@
 }
 
 #add-new-item {
-    font-size: 1.2rem;
-    width: 30%;
+    font-size: 1.1rem;
     justify-self: center;
+    align-self: center;
+}
+
+#sidebar-title {
+    border: solid 1px black;
+    font-size: 1.2rem;
+    text-align: center;
+    align-self: center;
+}
+
+#add-new-project {
+    align-self: center;
+    font-size: 1.1rem;
 }
