--- a/src/styles.css
+++ b/src/styles.css
@@ -78,15 +78,16 @@
 
 #content-todo-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
 }
 
 #todo-item {
     font-size: 1.2rem;
     padding: 5px;
-    width: 200px;
-    height: 100px;
+    width: 300px;
+    height: fit-content;
     justify-self: center;
+    align-content: center;
 }
 
 #sidebar-title {
@@ -152,4 +153,14 @@
 #remove-project {
     justify-self: flex-end;
     margin-left: 10px;
+    font-size: 1.1rem;
+}
+
+.item-details, .item-remove {
+    color: white;
+    background-color: black;
+    font-size: 1.2rem;
+    border: solid 2px white;
+    border-radius: 50%;
+    padding: 3px 10px;
 }
