--- a/src/styles.css
+++ b/src/styles.css
@@ -164,3 +164,15 @@
     border-radius: 50%;
     padding: 3px 10px;
 }
+
+.high {
+    background-color: rgb(214, 33, 20);
+}
+
+.medium {
+    background-color: rgb(206, 172, 22);
+}
+
+.low {
+    background-color: rgb(150, 149, 149);
+}
