--- a/src/styles.css
+++ b/src/styles.css
@@ -138,6 +138,11 @@
     border: solid 3px white;
     border-radius: 5px;
     color: white;
+
+    display: grid;
+    grid: 3fr 1fr / 
+          3fr 1fr /
+          3fr 1fr;
 }
 
 .project {
@@ -175,4 +180,19 @@
 
 .low {
     background-color: rgb(150, 149, 149);
+}
+
+#todo-item-buttons {
+    grid-row: 1 / 3;
+    grid-column: 2 / 3;
+}
+
+#item-description {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+
+#item-priority {
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
 }
