--- a/src/styles.css
+++ b/src/styles.css
@@ -140,9 +140,8 @@
     color: white;
 
     display: grid;
-    grid: 3fr 1fr / 
-          3fr 1fr /
-          3fr 1fr;
+    grid-template-columns: 3fr 1fr;
+    gap: 5px;
 }
 
 .project {
@@ -171,20 +170,47 @@
 }
 
 .high {
-    background-color: rgb(214, 33, 20);
+    background-color: rgb(218, 112, 105);
 }
 
 .medium {
-    background-color: rgb(206, 172, 22);
+    background-color: rgb(204, 176, 52);
 }
 
 .low {
-    background-color: rgb(150, 149, 149);
+    background-color: rgb(155, 155, 155);
+}
+
+.high #todo-item-title {
+    background-color: rgb(214, 33, 20);
+}
+
+.medium #todo-item-title {
+    background-color: rgb(196, 161, 9);
+}
+
+.low #todo-item-title {
+    background-color: rgb(126, 125, 125);
+}
+
+#todo-item-title {
+    grid-row: 1 / 2;
+    font-weight: 700;
+    border-radius: 10px;
+    padding: 5px;
+    margin-right: 5px;
+}
+
+#todo-item-duedate {
+    grid-row: 2 / 3;
 }
 
 #todo-item-buttons {
-    grid-row: 1 / 3;
+    grid-row: 1 / 5;
     grid-column: 2 / 3;
+    justify-self: center;
+    display: flex;
+    align-items: baseline;
 }
 
 #item-description {
