--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
+html {
+    font-family: "Figtree", sans-serif;
+}
+
 #container {
     display: grid;
     grid-template-rows: 1fr 5fr;
     grid-template-columns: 1fr 4fr;
 
     position: relative;
-
 }
 
 #container-title {
@@ -16,6 +19,7 @@
     align-items: center;
 
     font-size: 1.8rem;
+    font-weight: 700;
     padding: 10px;
 
     color: rgb(6, 71, 17);
@@ -51,13 +55,14 @@
     position: absolute;
     top: 30%;
     left: 50%;
-    background-color: blue;
-    color: white;
+    background-color: rgb(17, 202, 72);
+    color: rgb(6, 71, 17);
     padding: 10px;
     font-size: 1.1rem;
 
     display: flex;
     flex-direction: column;
+    border: solid 3px white;
     border-radius: 10px;
 }
 
@@ -98,7 +103,7 @@
     align-self: center;
 }
 
-#add-new-project, #add-new-item {
+#add-new-project, #add-new-item, #form-add-button {
     align-self: center;
     justify-self: center;
     font-size: 1.1rem;
@@ -124,6 +129,7 @@
 #add-form-title {
     font-size: 1.5rem;
     font-weight: 500;
+    padding-left: 10px;
 }
 
 #form-add-button {
@@ -147,6 +153,7 @@
 .project {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: 10px;
     background-color: rgb(8, 99, 49);
     color: white;
@@ -160,17 +167,17 @@
     font-size: 1.1rem;
 }
 
-.item-details, .item-details-collapse, .item-remove {
-    color: white;
-    background-color: black;
+.item-details, .item-details-collapse, .item-remove, #remove-project, #close-add-form {
+    background-color: white;
+    color: black;
     font-size: 1.2rem;
-    border: solid 2px white;
+    border: none;
     border-radius: 50%;
-    padding: 3px 10px;
+    padding: 0px 7px;
 }
 
 .high {
-    background-color: rgb(218, 112, 105);
+    background-color: rgb(228, 92, 82);
 }
 
 .medium {
@@ -181,19 +188,19 @@
     background-color: rgb(155, 155, 155);
 }
 
-.high #todo-item-title {
-    background-color: rgb(214, 33, 20);
+.high .todo-item-title {
+    background-color: rgb(211, 19, 5);
 }
 
-.medium #todo-item-title {
+.medium .todo-item-title {
     background-color: rgb(196, 161, 9);
 }
 
-.low #todo-item-title {
+.low .todo-item-title {
     background-color: rgb(126, 125, 125);
 }
 
-#todo-item-title {
+.todo-item-title {
     grid-row: 1 / 2;
     font-weight: 700;
     border-radius: 10px;
@@ -201,24 +208,42 @@
     margin-right: 5px;
 }
 
-#todo-item-duedate {
+.todo-item-duedate {
     grid-row: 2 / 3;
 }
 
-#todo-item-buttons {
+.todo-item-buttons {
     grid-row: 1 / 5;
     grid-column: 2 / 3;
     justify-self: center;
     display: flex;
+    gap: 5px;
     align-items: baseline;
 }
 
-#item-description {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
+.item-description {
+    grid-row: 3 / 4;
 }
 
-#item-priority {
-    grid-row: 3 / 4;
+.item-priority {
+    grid-row: 4 / 5;
+}
+
+.todo-item-duedate, .item-description, .item-priority {
     grid-column: 1 / 2;
+    font-size: 1rem;
+}
+
+input[type="text"]:focus, input[type="date"]:focus {
+    outline: none;
+    box-shadow: 2px 2px 2px grey;
+}
+
+input[type="text"], input[type="date"] {
+    border: none;
+    border-radius: 5px;
+    height: 1.2rem;
+    font-family: inherit;
+    padding: 2px;
+    margin-left: 5px;
 }
