--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,14 @@ html {
     height: fit-content;
     justify-self: center;
     align-content: center;
+
+    border: solid 3px white;
+    border-radius: 5px;
+    color: white;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 5px;
 }
 
 #sidebar-title {
@@ -140,16 +148,6 @@ html {
     margin: 10px;
 }
 
-#todo-item {
-    border: solid 3px white;
-    border-radius: 5px;
-    color: white;
-
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    gap: 5px;
-}
-
 .project {
     display: flex;
     justify-content: space-between;
@@ -174,11 +172,6 @@ html {
     border: none;
     border-radius: 50%;
     padding: 0px 7px;
-}
-
-.item-edit {
-    border-radius: 5px;
-    padding: 5px;
 }
 
 .item-complete {
@@ -215,20 +208,45 @@ html {
     border-radius: 10px;
     padding: 5px;
     margin-right: 5px;
+    align-content: center;
 }
 
 .todo-item-duedate {
     grid-row: 2 / 3;
+    align-self: center;
 }
 
 .todo-item-buttons {
-    grid-row: 1 / 5;
+    grid-row: 1 / 3;
     grid-column: 2 / 3;
     justify-self: center;
+    height: fit-content;
     display: grid;
-    grid: 1fr 1fr 1fr 1fr / 3fr;
+    grid-template: 1fr 1fr 1fr / 3fr;
     gap: 5px;
-    /* align-items: baseline; */
+}
+
+.item-details, .item-details-collapse {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+} 
+
+.item-complete {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+}
+
+.item-remove {
+    grid-column: 3 / 4;
+    grid-row: 1 / 2;
+} 
+
+.item-edit {
+    grid-column: 1 / 4;
+    grid-row: 2 / 3;
+    border-radius: 5px;
+    padding: 2px 10px;
+    justify-self: center;
 }
 
 .item-description {
