--- a/src/styles.css
+++ b/src/styles.css
@@ -223,6 +223,7 @@ html {
     height: fit-content;
     display: grid;
     grid-template: 1fr 1fr 1fr / 3fr;
+    grid-template-rows: 30px 30px;
     gap: 5px;
 }
 
